[package]
edition.workspace = true
name              = "binding"
publish           = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rspack_binding_builder        = { workspace = true }
rspack_binding_builder_macros = { workspace = true }

rspack_core    = { workspace = true }
rspack_error   = { workspace = true }
rspack_hook    = { workspace = true }
rspack_sources = { workspace = true }

napi        = { workspace = true, features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-derive = { workspace = true, features = ["compat-mode"] }

# Enable SWC plugin feature for targets that support it
[target.'cfg(not(any(target_arch = "wasm32", all(target_os = "windows", target_arch = "x86"), all(target_os = "windows", target_arch = "aarch64"))))'.dependencies]
rspack_binding_builder = { workspace = true, features = ["plugin"] }

[build-dependencies]
rspack_binding_build = { workspace = true }
